log
Fri 17 Mar 2023 05:42:29 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
c608dbb
Fri 17 Mar 2023 05:50:16 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5f065fd
Fri 17 Mar 2023 05:54:33 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:107:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  107 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
Compilation failed
9dbb7f1
Fri 17 Mar 2023 05:58:08 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|5
total_score: 20/70
2c75a8c
Fri 17 Mar 2023 05:58:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
32f800c
Fri 17 Mar 2023 05:59:59 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘asignarValor’:
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6a02f01
Fri 17 Mar 2023 06:00:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1677e14
Fri 17 Mar 2023 06:01:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
0c43325
Fri 17 Mar 2023 06:07:17 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
2daddb5
Fri 17 Mar 2023 06:12:57 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
6e2a6c7
Fri 17 Mar 2023 06:17:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:11: error: unused variable ‘vector’ [-Werror=unused-variable]
   81 |   Vector *vector = (Vector*) malloc(sizeof (Vector));
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
60a7cb1
Fri 17 Mar 2023 06:25:57 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|4
total_score: 30/70
4ed4dd5
Fri 17 Mar 2023 06:27:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:11: error: ‘*vector.datos’ may be used uninitialized [-Werror=maybe-uninitialized]
   85 |     vector->datos[i]= 0;
      |     ~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
30932db
Fri 17 Mar 2023 06:27:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:11: error: ‘vector’ is a pointer; did you mean to use ‘->’?
   85 |     vector.datos[i]= 0;
      |           ^
      |           ->
Compilation failed
21bd2b4
Fri 17 Mar 2023 06:27:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:11: error: ‘*vector.datos’ may be used uninitialized [-Werror=maybe-uninitialized]
   85 |     vector->datos[i] = 0;
      |     ~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c22b90f
Fri 17 Mar 2023 06:30:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:11: error: ‘*vector.datos’ may be used uninitialized [-Werror=maybe-uninitialized]
   85 |     vector->datos[i] = 0;
      |     ~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a739cbc
Fri 17 Mar 2023 06:30:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:85:11: error: ‘*vector.datos’ may be used uninitialized [-Werror=maybe-uninitialized]
   85 |     vector->datos[i] = 0;
      |     ~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6520a6c
Fri 17 Mar 2023 06:32:12 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c: In function ‘test_creaV’:
test.c:140:17: error: implicit declaration of function ‘crearVector’ [-Werror=implicit-function-declaration]
  140 |     Vector *v = crearVector(size);
      |                 ^~~~~~~~~~~
test.c:140:17: error: initialization of ‘Vector *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
dacd6aa
Fri 17 Mar 2023 06:32:45 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
669095b
Fri 17 Mar 2023 10:51:20 PM UTC: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  4|3
total_score: 40/70
89335f2
Fri 17 Mar 2023 10:57:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
2974875
Fri 17 Mar 2023 11:04:02 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 40/70
91d2f2d
Fri 17 Mar 2023 11:46:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
b2bbd45
Fri 17 Mar 2023 11:48:44 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 60/70
2136756
